--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="main.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
@@ -20,7 +21,7 @@
 		</tr>
 		<tr>
 			<td><div>內容3</div></td>
-			<td><div id ="specialCase"></div>內容4</div>></td>
+			<td><div id ="specialCase">內容4</div>></td>
 		</tr>
 	</table>
 </body>
